# Redesign

./: Main.xaml  Main.xaml.json  project.json
.objects/: .metadata
.project/: PackageBindingsMetadata.json
Data/: Config.xlsx
Framework/: CloseAllApplications.xaml  GetTransactionData.xaml  InitAllApplications.xaml  InitAllSettings.xaml  KillAllProcesses.xaml  Process.xaml  RetryCurrentTransaction.xaml  SetTransactionStatus.xaml  TakeScreenshot.xaml
Python-scripts/: auxiliar.py  executar_acao_site_caixa.py  main.py  pyproject.toml  registrador_logs.py  script_executor.py
Python-scripts/POM/elementos/: elementos_pagina_chave.py  elementos_pagina_extrato_fgts.py  elementos_pagina_inicial.py  elementos_pagina_localizacao_trabalhador.py  elementos_pagina_selecao_servicos.py
Python-scripts/POM/page_objects/: page_objects.py
Python-scripts/POM/pages/: pagina_chave.py  pagina_extrato_fgts.py  pagina_inicial.py  pagina_localizacao_trabalhador.py  pagina_selecao_servicos.py
Tests/: ProcessTestCase.xaml
Workflows/Auxiliar/: AjustaDataAdmissao.xaml  CriarPasta.xaml  ExecutarScriptPython.xaml  GuardarEvidenciasPython.xaml  RecuperarPosicaoCertificados.xaml  ValidacaoSiteCaixa.xaml  ValidacaoTemplate.xaml  validacaoCertificadosDigitais.xaml
Workflows/Excel/: LerDocumentoAuxiliar.xaml
Workflows/Gsuite/: EnvioDeEmail.xaml
Workflows/Obs/: RecordVideo.xaml
Workflows/Orchestrator/: RecuperarAmbiente.xaml
Workflows/ServiceNow/: RecuperarArquivoSN.xaml
